# policymatch

./: .gitattributes  .gitignore  LICENSE.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
setup-requires/pytest_runner-2.9.dist-info/: RECORD
src/policymatch/: _version.py  main.py  policy_matcher.py  utilities.py
src/policymatch/tests/: example.hcmask
