[metadata]
setup-requires = pytest-runner

[versioneer]
VCS = git
style = pep440
versionfile_source = src/policymatch/_version.py
versionfile_build = policymatch/_version.py
tag_prefix =
parentdir_prefix = policymatch-

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* contrib puppet *.egg CVS _darcs {arch} docs setup-requires
addopts = -x --cov=policymatch

[aliases]
test=pytest
